--- a/style.css
+++ b/style.css
@@ -1,96 +1,310 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+body {
+  font-family: "Inter", "Beth Ellen", sans-serif;
+  background-color: #f0f0f0;
+  color: #131313;
+  font-size: 16px;
   line-height: 1.5;
-  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+address {
+  font-style: normal;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
 }
-a:hover {
-  color: #535bf2;
-}
-
-body {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+ol,
+ul {
+  padding-left: 0;
+  list-style: none;
 }
 
-#app {
-  max-width: 1280px;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+input {
+  font-family: inherit;
+}
+
+section {
+  padding: 140px 0;
+}
+
+.container {
+  width: 1440px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 72px;
+}
+
+.header-nav {
+}
+.header-title {
+}
+.header-list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 33px;
+}
+
+.header-list-item {
+}
+
+.hero {
+  background: #fff;
+}
+
+.hero-back {
+  border-radius: 42px;
+  width: 1296px;
+  height: 677px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-title {
+  font-family: "Beth Ellen", sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.4;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #000;
+}
+
+.hero-text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 2.1;
+  letter-spacing: 0.05em;
+  text-align: center;
+  color: #000;
+}
+
+.hero-button {
+  padding: 20px 60px;
+  border-radius: 42px;
+  background-color: #ff8e47;
+  border: none;
+}
+
+.hero-sponsors {
+}
+
+.hero-subtitle {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.hero-sponsors-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.sponsors-list-item {
+}
+
+.hero-about-list {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 60px;
+  width: 736px;
+  height: 524px;
+}
+
+.about-list-item {
+}
+
+.about-subtitle {
+  font-family: "Beth Ellen", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1;
+}
+
+.about-text {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.info {
+  background-color: #88d3fc;
 }
 
-.card {
-  padding: 2em;
+.info-wrap {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 24px;
+  height: 720px;
 }
 
-.read-the-docs {
-  color: #888;
+.info-card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 42px;
+  width: 306px;
+  border-radius: 42px;
+  padding: 21px 20px;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+.small {
+  height: 306px;
+}
+
+.medium {
+  height: 390px;
+}
+
+.large {
+  width: 636px;
+  height: 720px;
+}
+
+.equipment {
+  background-color: #88d3fc;
+}
+.card-title {
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-size: 90px;
+  line-height: 0.89;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.card-text {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+.info-main-card {
+  font-size: 140px;
+}
+.card-button {
+  padding: 20px 60px;
+  border-radius: 42px;
+  background-color: #ff8e47;
+  border: none;
+}
+.equipment-title {
+  margin: 0 auto;
+  font-weight: 500;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.equipment-item {
+  border-radius: 42px;
+  width: 1296px;
+  height: 414px;
+  background-color: #fff;
+}
+.equipment-subtitle {
+}
+.equipment-subtitle-text {
+}
+.equipment-content {
+}
+.equipment-image {
+}
+.equipment-text-content {
+}
+.equipment-text {
+}
+.equipment-svg-desc {
+}
+.about-wrap {
+}
+.about-image {
+}
+.about-text-wrap {
+}
+.about-title {
+}
+.auction-title {
+}
+.auction-list {
+}
+.auction-item {
+}
+.auction-card {
+}
+.auction-card-subtitle {
+}
+.auction-card-text {
+}
+.auction-card-wrap {
+}
+.reviews-title {
+}
+.reviews-wrap {
+}
+.reviews-card {
+}
+.reviews-image {
+}
+.reviews-subtitle {
+}
+.reviews-text {
+}
+.cta-card {
+}
+.cta-title {
+}
+.cta-text {
+}
+.cta-butt {
+}
+.footer-content {
+}
+.footer-links {
+}
+.subscribe-form {
+}
+.subscribe-title {
+}
+.form-email {
+}
+.subscribe-button {
+}
+.social-links {
+}
+.social-links-item {
+}
+.policy-text {
 }
