--- a/style.css
+++ b/style.css
@@ -362,20 +362,20 @@ section {
   letter-spacing: 0.01em;
   text-transform: uppercase;
   position: absolute;
-  top: 50%;
+  /* top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   pointer-events: none;
   opacity: 0;
-  /* scale: 0; */
-  transition: opacity 400ms ease;
+  transform: scale(0);
+  transition: opacity 400ms ease, transform 400ms ease;
 }
 
 .small:hover .card-learn-more,
 .medium:hover .card-learn-more {
   pointer-events: all;
   opacity: 1;
-  /* scale: 1; */
+  transform: scale(1);
 }
 
 .equipment {
