--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ img {
 button {
   font-family: inherit;
   display: block;
-  cursor: pointer;
 }
 
 input {
@@ -147,7 +146,6 @@ section {
 
 .sponsors-icon {
   display: block;
-
   width: 156px;
   height: 40px;
 }
@@ -162,12 +160,11 @@ section {
   display: flex;
   gap: 24px;
   align-items: center;
-  justify-content: center;
+
   flex-shrink: 0;
 }
 
 .sponsors-list-item {
-  margin: 0 auto;
 }
 
 .hero-about-list {
@@ -180,19 +177,14 @@ section {
   gap: 60px;
   width: 736px;
   height: 524px;
-  position: relative;
 }
 
 .hero-about-list::before {
   content: url(./img/Flowerleft.svg);
-  position: absolute;
-  transform: translatex(-200%);
 }
 
 .hero-about-list::after {
   content: url(./img/Flowerright.svg);
-  position: absolute;
-  transform: translatex(200%);
 }
 
 .about-list-item {
@@ -227,155 +219,23 @@ section {
   border-radius: 42px;
   width: 306px;
   border-radius: 42px;
-  padding: 20px 20px;
+  padding: 21px 20px;
   align-items: center;
   justify-content: center;
   background: #fff;
-  position: relative;
-  overflow: hidden;
-}
-
-.info-card svg {
-  position: absolute;
-}
-
-.info-small-up {
-  top: 0;
-  left: 0;
-}
-
-.info-small-down {
-  right: -10px;
-  bottom: 0;
-  rotate: -6.7deg;
 }
 
 .small {
   height: 306px;
-  transition: background-color 400ms ease;
-}
-
-.small svg {
-  width: 155px;
-  height: 96px;
-  transition: 400ms ease;
-}
-
-.small:hover .info-small-up,
-.small:hover .info-small-down {
-  width: 183px;
-  height: 114px;
-  fill: #fff;
-}
-
-.small:hover .card-title,
-.small:hover .card-text,
-.medium:hover .card-title,
-.medium:hover .card-text {
-  opacity: 0;
-  pointer-events: none;
 }
 
 .medium {
   height: 390px;
-  transition: background-color 400ms ease;
-}
-
-.medium svg {
-  width: 170px;
-  height: 49px;
-  transition: 400ms ease;
-}
-
-.medium:hover .info-medium-down,
-.medium:hover .info-medium-up {
-  fill: #fff;
-  width: 192px;
-  height: 55px;
-}
-
-.info-medium-up {
-  top: 50px;
-}
-
-.info-medium-down {
-  bottom: 50px;
 }
 
 .large {
   width: 636px;
   height: 720px;
-  gap: 68px;
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: background-color 400ms ease;
-}
-
-.small:hover,
-.medium:hover,
-.large:hover {
-  background-color: #ff8e47;
-}
-
-.info-large-up {
-  width: 168px;
-  height: 172px;
-  left: 20px;
-  top: 20px;
-  transition: 400ms ease;
-}
-
-.large:hover .info-large-up {
-  fill: #fff;
-  width: 192px;
-  height: 204px;
-  left: 0;
-  top: 0;
-}
-
-.info-large-down {
-  width: 168px;
-  height: 172px;
-  right: 20px;
-  bottom: 20px;
-  transition: 400ms ease;
-}
-
-.large:hover .info-large-down {
-  fill: #fff;
-  width: 192px;
-  height: 204px;
-  right: 0;
-  bottom: 0;
-}
-
-.card-learn-more {
-  width: 228px;
-  border-radius: 42px;
-  padding: 20px 60px;
-  outline: none;
-  border: none;
-  background: #fff;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 1.45;
-  letter-spacing: 0.01em;
-  text-transform: uppercase;
-  position: absolute;
-  /* top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
-  pointer-events: none;
-  opacity: 0;
-  transform: scale(0);
-  transition: opacity 400ms ease, transform 400ms ease;
-}
-
-.small:hover .card-learn-more,
-.medium:hover .card-learn-more {
-  pointer-events: all;
-  opacity: 1;
-  transform: scale(1);
 }
 
 .equipment {
@@ -387,16 +247,6 @@ section {
   line-height: 0.89;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  transition: opacity 400ms ease;
-}
-
-.card-title.main {
-  font-size: 140px;
-  transition: font-size 400ms ease;
-}
-
-.large:hover .card-title.main {
-  font-size: 150px;
 }
 
 .card-text {
@@ -405,31 +255,16 @@ section {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  transition: opacity 400ms ease;
 }
-
-.card-text.main {
-  max-width: 246px;
-  transition: letter-height 400ms ease, font-size 400ms ease;
+.info-main-card {
+  font-size: 140px;
 }
-
-.large:hover .card-text.main {
-  font-size: 15px;
-  line-height: 1.73;
-}
-
 .card-button {
   padding: 20px 60px;
   border-radius: 42px;
   background-color: #ff8e47;
   border: none;
-  transition: background-color 400ms ease;
 }
-
-.large:hover .card-button {
-  background-color: #fff;
-}
-
 .equipment-title {
   text-align: center;
   margin-bottom: 80px;
