--- a/style.css
+++ b/style.css
@@ -456,6 +456,8 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid #000;
+  background-color: transparent;
 }
 
 .equipment-button-svg {
@@ -540,35 +542,103 @@ section {
   flex-direction: row;
 }
 .about-image {
+  border-radius: 42px;
+  margin-right: 132px;
 }
 .about-text-wrap {
-  line-height: 2;
-  letter-spacing: 0.02em;
+  display: flex;
+  flex-direction: column;
+  gap: 123px;
 }
 .about-title {
   font-weight: 400;
   line-height: 1;
 }
+
+.about-text {
+  line-height: 2;
+  letter-spacing: 0.02em;
+}
+
+.arrow-wrap {
+  display: flex;
+  gap: 206px;
+}
+
+.about-arrow {
+  width: 160px;
+  height: 42px;
+}
+
 .auction-title {
 }
+
 .auction-list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 24px;
 }
+
 .auction-item {
   width: 634px;
-  height: 436px;
+  height: 400px;
   border-radius: 42px;
   background-color: #88d3fc;
 }
 
 .auction-card {
+  height: 400px;
+  border-radius: 42px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100%;
+  transition: background-size 400ms ease;
+}
+
+.auction-card:hover {
+  background-size: 120%;
+  background-color: linear-gradient(
+    rgba(136, 211, 252, 0.6),
+    rgba(136, 211, 252, 0.6)
+  );
+}
+
+.auction-card-content {
+  opacity: 0;
+  pointer-events: none;
+  width: 634px;
+  height: 400px;
   text-align: center;
   align-content: end;
   padding: 60px;
-  height: 436px;
+  border-radius: 42px;
+  background-image: linear-gradient(
+    rgba(136, 211, 252, 0.6),
+    rgba(136, 211, 252, 0.6)
+  );
+  transition: opacity 400ms ease;
+}
+
+.auction-card:hover .auction-card-content {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.first-image {
+  background-image: url(./img/auction-1.png);
+}
+
+.second-image {
+  background-image: url(./img/auction-2.png);
+}
+
+.third-image {
+  background-image: url(./img/auction-3.png);
+}
+
+.fourth-image {
+  background-image: url(./img/auction-4.png);
 }
 
 .auction-card-wrap {
@@ -589,6 +659,7 @@ section {
   border-radius: 42px;
   border: none;
 }
+
 .auction-card-subtitle {
   margin-bottom: 12px;
   font-weight: 500;
