--- a/style.css
+++ b/style.css
@@ -565,6 +565,16 @@ section {
   gap: 206px;
 }
 
+.about-button {
+  border: none;
+  background-color: transparent;
+  transition: transform 400ms ease;
+}
+
+.about-button:hover {
+  transform: scale(1.1);
+}
+
 .about-arrow {
   width: 160px;
   height: 42px;
